--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
 <!-- START: Screenshot Gallery Script -->
 <script>
-const BACKEND_URL = 'https://tirinox.serveminecraft.net:24565';
+const BACKEND_URL = 'https://f03b-141-147-58-70.ngrok-free.app';
 
 document.addEventListener('DOMContentLoaded', () => {
     const uploadArea = document.getElementById('upload-area');
