--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang=en>
+<html lang="en">
 <head>
-<meta charset=UTF-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<title>Z E Z O's Profile</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Z E Z O's Profile</title>
 <link href="https://fonts.cdnfonts.com/css/minecraftia" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}body,html{height:100%}body{min-height:100vh;display:flex;justify-content:center;align-items:center;color:#fff;text-align:center;position:relative;overflow-x:hidden;background:linear-gradient(180deg,#181b2c 0,#232946 100%)}.star{position:absolute;width:2px;height:2px;background:#fff;border-radius:50%;opacity:.85;pointer-events:none;z-index:0;animation:starFall linear}@keyframes starFall{0%{opacity:.9;transform:translateY(0) scale(1)}80%{opacity:1;transform:translateY(90vh) scale(1.2)}100%{opacity:0;transform:translateY(100vh) scale(.7)}}.nature-bg{display:none!important}.nature-blob{display:none!important}@keyframes blobMove{0%{transform:scale(1) translateY(0) translateX(0)}50%{transform:scale(1.15) translateY(-30px) translateX(20px)}100%{transform:scale(1) translateY(0) translateX(0)}}@keyframes bgGradientMove{0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}.profile{background:linear-gradient(135deg,rgba(168,85,247,.18) 0,rgba(147,51,234,.18) 100%);padding:32px 28px;border-radius:28px;max-width:370px;box-shadow:0 0 32px 0 rgba(168,85,247,.18),0 8px 32px 0 rgba(0,0,0,.25);position:relative;border:2px solid rgba(168,85,247,.25);overflow:hidden;animation:profileFadeIn 1.2s cubic-bezier(.77,0,.18,1) both;transition:box-shadow .5s,border .5s,background .5s;z-index:1; margin-top: 5vh;}.profile:hover{box-shadow:0 0 48px 0 #a855f7,0 8px 48px 0 #9333ea;border:2.5px solid #a855f7;background:linear-gradient(120deg,rgba(168,85,247,.28) 0,rgba(147,51,234,.28) 100%)}@keyframes profileFadeIn{0%{opacity:0;transform:scale(.92) translateY(40px);filter:blur(6px)}100%{opacity:1;transform:scale(1) translateY(0);filter:blur(0)}}.avatar-container{position:relative;display:inline-block;width:116px;height:116px;margin:0 auto}.avatar-border{position:absolute;top:0;left:0;width:100%;height:100%;border-radius:50%;background:conic-gradient(from 0deg,#a855f7 0,#9333ea 25%,#7e22ce 50%,#6b21a8 75%,#a855f7 100%);animation:spin 3s linear infinite,pulse 4s ease-in-out infinite,borderGlow 5s ease-in-out infinite;z-index:0;box-shadow:0 0 15px rgba(168,85,247,.6),0 0 30px rgba(147,51,234,.4);filter:brightness(1.1)}@keyframes spin{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}@keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.05)}}@keyframes borderGlow{0%,100%{box-shadow:0 0 15px rgba(168,85,247,.6),0 0 30px rgba(147,51,234,.4)}50%{box-shadow:0 0 25px rgba(168,85,247,.8),0 0 45px rgba(147,51,234,.6)}}.profile img{width:100px;height:100px;border-radius:50%;object-fit:cover;border:3px solid #fff;position:absolute;top:8px;left:8px;z-index:1;transition:transform .5s ease,filter .5s ease}.avatar-container:hover .avatar-border{animation:spin 1.5s linear infinite,pulse 2s ease-in-out infinite,borderGlow 3s ease-in-out infinite}.avatar-container:hover img{transform:scale(1.03);filter:brightness(1.1)}.profile h1{margin:15px 0 5px;font-size:1.8em;letter-spacing:3px;position:relative;transition:color .3s;cursor:pointer}.profile h1::after{content:'';display:block;width:0;height:3px;background:linear-gradient(90deg,#a855f7,#9333ea,#a855f7);border-radius:2px;transition:width .3s;margin:0 auto}.profile h1:hover{color:#c084fc;text-shadow:0 0 8px #a855f7,0 0 16px #9333ea}.profile h1:hover::after{width:80%}.profile p{font-size:.95em;color:#ddd}.social-icons{margin-top:20px}.social-icons a{color:#fff;text-decoration:none;margin:0 10px;font-size:1.4em;display:inline-block;transition:transform .4s ease,color .4s ease;position:relative}.social-icons a::after{content:'';position:absolute;bottom:-4px;left:50%;transform:translateX(-50%);width:0%;height:2px;background:#9333ea;transition:width .3s ease-in-out}.social-icons a:hover{color:#c084fc;transform:scale(1.3) rotate(5deg)}.social-icons a:hover::after{width:100%}.last-seen{margin-top:15px;font-size:.85em;color:#aaa}.views{margin-top:10px;font-size:.85em;color:#bbb}.profile{position:relative;z-index:1}.whitelist-form h2{color:#fdfdfd!important;text-shadow:1px 1px 0 #fff,0 0 6px #fff;font-family:Minecraftia,'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;letter-spacing:1px;margin-bottom:8px}#mc-whitelist-form{display:flex;gap:5px;width:100%;justify-content:center}#mc-name{flex:1;padding:4px 7px;border-radius:6px;border:2px solid #a855f7;outline:0;font-size:.95em;background:#f3e8ff;color:#6b21a8;font-family:Minecraftia,'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;box-shadow:1px 1px 0 #e9d5ff inset;transition:border .2s}#mc-name:focus{border:2px solid #c084fc}#mc-whitelist-form button{padding:4px 10px;border-radius:6px;border:2px solid #a855f7;background:linear-gradient(90deg,#a855f7 60%,#c084fc 100%);color:#fff;font-weight:700;font-size:.95em;cursor:pointer;font-family:Minecraftia,'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;box-shadow:1px 1px 0 #e9d5ff inset;transition:background .2s,border .2s}#mc-whitelist-form button:hover{background:linear-gradient(90deg,#c084fc 60%,#a855f7 100%);border:2px solid #c084fc}#whitelist-message{margin-top:7px;font-size:.92em;color:#c084fc;min-height:16px;text-shadow:0 0 6px #a855f7;font-family:Minecraftia,'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}@keyframes fadeInUp{0%{opacity:0;transform:translateY(10px)}100%{opacity:1;transform:translateY(0)}}@keyframes mcPopIn{0%{opacity:0;transform:scale(.92) translateY(30px)}100%{opacity:1;transform:scale(1) translateY(0)}}@keyframes slideOutUp{0%{opacity:1;transform:translateY(0)}100%{opacity:0;transform:translateY(-20px)}}@keyframes slideOutDown{0%{opacity:1;transform:translateY(0)}100%{opacity:0;transform:translateY(20px)}}@keyframes slideOutRight{0%{opacity:1;transform:translateX(0)}100%{opacity:0;transform:translateX(100px)}}@keyframes slideOutLeft{0%{opacity:1;transform:translateX(0)}100%{opacity:0;transform:translateX(-100px)}}.whitelist-form.closing #mc-whitelist-form input{animation:slideOutLeft .4s forwards}.whitelist-form.closing #mc-whitelist-form button{animation:slideOutRight .4s forwards}.whitelist-form.closing #whitelist-message{animation:slideOutDown .3s forwards}@keyframes successPop{0%{opacity:0;transform:scale(.9) translateY(10px)}50%{opacity:1;transform:scale(1.05) translateY(-5px)}100%{opacity:1;transform:scale(1) translateY(0)}}.whitelist-form.success #whitelist-message{animation:successPop .6s ease-out}@keyframes thankYouBounce{0%{opacity:0;transform:scale(.8) translateY(30px)}50%{opacity:1;transform:scale(1.1) translateY(-10px)}100%{opacity:1;transform:scale(1) translateY(0)}}.whitelist-form.thankyou #whitelist-message{animation:thankYouBounce .8s ease-out}ky::before{content:'';position:absolute;top:0;left:0;width:100%;height:100%;background:transparent url('data:image/svg+xml,%3Csvg ... %3C/svg%3E') no-repeat center center;animation:twinkling 4s infinite linear}.real-cloud{position:fixed;z-index:2;opacity:.85;pointer-events:none;filter:drop-shadow(0 4px 16px #0002);animation:none!important;transition:opacity 1s}.cloud-img1{top:12vh;left:10vw;width:320px}.cloud-img2{top:15vh;left:32vw;width:340px}.cloud-img3{top:11vh;left:58vw;width:280px}.cloud-img4{top:18vh;left:78vw;width:220px}.ground-img{width:100vw;min-width:100vw;height:120px;object-fit:cover;position:absolute;left:0;bottom:0;z-index:1;pointer-events:none;user-select:none}.tree-img{position:absolute;left:12vw;bottom:40px;width:120px;height:auto;z-index:2;pointer-events:none;user-select:none}@media (max-width: 600px) {.profile {max-width: 90%;padding: 24px 20px;}}.minecraft-launcher-bar{position:fixed;left:0;right:0;bottom:0;z-index:999;display:flex;justify-content:center;align-items:center;gap:10px;padding:6px 0 6px 0;background:linear-gradient(90deg,#a855f7 0%,#c084fc 100%);box-shadow:0 -4px 32px #a855f7cc;animation:slideUpBar 1s cubic-bezier(.77,0,.18,1)}@media (max-width: 600px) {.minecraft-launcher-bar{flex-direction:column;gap:6px;padding:5px 0 5px 0;bottom:0;left:0;right:0}.minecraft-btn{width:92vw;font-size:.8em;padding:6px 0;border-radius:7px}}.minecraft-btn{font-family:'Minecraftia','Segoe UI',Tahoma,Geneva,Verdana,sans-serif;font-size:.85em;letter-spacing:1px;padding:7px 14px;border-radius:7px;border:2px solid #fff;background:linear-gradient(90deg,#9333ea 60%,#a855f7 100%);color:#fff;box-shadow:0 1px 6px #9333ea33;cursor:pointer;transition:transform .18s,box-shadow .18s,background .18s;outline:none;position:relative;overflow:hidden;min-width:0}.minecraft-btn:active{transform:scale(.96)}.minecraft-btn:hover{background:linear-gradient(90deg,#a855f7 60%,#9333ea 100%);box-shadow:0 3px 8px #a855f7aa;animation:btnPulse .5s}@keyframes btnPulse{0%{box-shadow:0 0 0 #a855f7}50%{box-shadow:0 0 8px #fff}100%{box-shadow:0 3px 8px #a855f7aa}}.minecraft-btn .icon{margin-right:7px;font-size:1em;vertical-align:middle}.star{position:absolute;width:2px;height:2px;background:#fff;border-radius:50%;opacity:.32!important;pointer-events:none;z-index:0;animation:starFall linear;filter:blur(.5px) brightness(1.1);transition:filter .5s,opacity .5s}@keyframes starShine{0%,100%{filter:blur(.5px) brightness(1.1);opacity:.32}10%{filter:blur(.5px) brightness(2.1);opacity:.55}20%{filter:blur(.5px) brightness(1.5);opacity:.38}30%{filter:blur(.5px) brightness(1.7);opacity:.44}40%{filter:blur(.5px) brightness(1.3);opacity:.34}50%{filter:blur(.5px) brightness(1.7);opacity:.44}60%{filter:blur(.5px) brightness(1.5);opacity:.38}70%{filter:blur(.5px) brightness(2.1);opacity:.55}80%{filter:blur(.5px) brightness(1.3);opacity:.34}90%{filter:blur(.5px) brightness(1.7);opacity:.44}}.star.shining{animation:starShine 2.5s linear}
@@ -286,7 +286,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
 <!-- START: Screenshot Gallery Script -->
 <script>
-const BACKEND_URL = 'https://f03b-141-147-58-70.ngrok-free.app';
+const BACKEND_URL = 'https://f03b-141-147-58-70.ngrok-free.app'; // Your Telegram backend URL
 
 document.addEventListener('DOMContentLoaded', () => {
     const uploadArea = document.getElementById('upload-area');
@@ -301,14 +301,14 @@ document.addEventListener('DOMContentLoaded', () => {
 
     const IMAGES_PER_PAGE = 15;
     let currentPage = 1;
-    let allImages = []; // This will hold the URLs of approved images from the server
+    let allImages = [];
 
     // --- Animation on Scroll ---
     const observer = new IntersectionObserver((entries) => {
         entries.forEach(entry => {
             if (entry.isIntersecting) {
                 gallerySection.classList.add('visible');
-                fetchAndDisplayImages(); // Fetch images when gallery is visible
+                fetchAndDisplayImages();
                 observer.unobserve(entry.target);
             }
         });
@@ -339,27 +339,28 @@ document.addEventListener('DOMContentLoaded', () => {
         const formData = new FormData();
         let validFiles = false;
 
+        // Only send the first image (Telegram backend expects single file as 'image')
         for (const file of files) {
             if (file.type.startsWith('image/')) {
-                formData.append('screenshots', file);
+                formData.append('image', file); // Use 'image' to match backend
                 validFiles = true;
+                break; // Only one image per upload
             }
         }
 
         if (!validFiles) {
-             uploadMessage.textContent = 'Please select valid image files.';
+             uploadMessage.textContent = 'Please select a valid image file.';
              return;
         }
 
         try {
-            // IMPORTANT: Replace '/upload' with the actual URL of your Python backend server
             const response = await fetch(`${BACKEND_URL}/upload`, {
                 method: 'POST',
                 body: formData
             });
 
             if (response.ok) {
-                uploadMessage.textContent = 'Screenshot(s) sent for approval!';
+                uploadMessage.textContent = 'Screenshot sent for approval!';
             } else {
                 const errorData = await response.json();
                 uploadMessage.textContent = `Error: ${errorData.error || 'Upload failed.'}`;
@@ -369,18 +370,16 @@ document.addEventListener('DOMContentLoaded', () => {
             uploadMessage.textContent = 'Error connecting to the server.';
         }
         
-        // Clear message after a few seconds
         setTimeout(() => { uploadMessage.textContent = ''; }, 5000);
     }
 
     // --- Image Fetching and Pagination ---
     async function fetchAndDisplayImages() {
         try {
-            // IMPORTANT: Replace '/get-images' with your actual server endpoint
             const response = await fetch(`${BACKEND_URL}/get-images`);
             if (!response.ok) throw new Error('Failed to fetch images.');
             
-            allImages = await response.json(); // Expects an array of image URLs
+            allImages = await response.json();
             currentPage = 1;
             renderPage();
         } catch (error) {
@@ -390,7 +389,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }
 
     function renderPage() {
-        screenshotGrid.innerHTML = ''; // Clear existing images
+        screenshotGrid.innerHTML = '';
 
         const totalPages = Math.ceil(allImages.length / IMAGES_PER_PAGE) || 1;
 
@@ -405,14 +404,12 @@ document.addEventListener('DOMContentLoaded', () => {
                 const item = document.createElement('div');
                 item.className = 'screenshot-item';
 
-                // Wrap image in a link
                 const img = document.createElement('img');
                 img.src = imageUrl;
                 img.alt = 'Minecraft Screenshot';
                 img.loading = 'lazy';
                 img.style.cursor = 'pointer';
 
-                // Open modal on click
                 img.addEventListener('click', () => openImageModal(imageUrl));
 
                 item.appendChild(img);
@@ -420,7 +417,6 @@ document.addEventListener('DOMContentLoaded', () => {
             });
         }
 
-        // Update page info and button states
         pageInfo.textContent = `Page ${currentPage} / ${totalPages}`;
         prevPageBtn.disabled = currentPage === 1;
         nextPageBtn.disabled = currentPage === totalPages;
@@ -438,11 +434,10 @@ document.addEventListener('DOMContentLoaded', () => {
         document.getElementById('image-modal').style.display = 'none';
         document.body.style.overflow = '';
     };
-    // Optional: close modal on background click
     document.getElementById('image-modal').onclick = function(e) {
         if (e.target === this) {
-        this.style.display = 'none';
-        document.body.style.overflow = '';
+            this.style.display = 'none';
+            document.body.style.overflow = '';
         }
     };
 
