--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
 <!-- START: Screenshot Gallery Script -->
 <script>
-const BACKEND_URL = 'http://tirinox.serveminecraft.net:24565'; // Your Telegram backend URL
+const BACKEND_URL = 'https://abcd1234.ngrok-free.app';// Your Telegram backend URL
 
 document.addEventListener('DOMContentLoaded', () => {
     const uploadArea = document.getElementById('upload-area');
