--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
 <!-- START: Screenshot Gallery Script -->
 <script>
-const BACKEND_URL = 'https://15a6-141-147-58-70.ngrok-free.app';// Your Telegram backend URL
+const BACKEND_URL = 'https://e999-141-147-58-70.ngrok-free.app';// Your Telegram backend URL
 
 document.addEventListener('DOMContentLoaded', () => {
     const uploadArea = document.getElementById('upload-area');
