--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     // 2. Sign up for a free account.
     // 3. Once you are in your account, copy your API key.
     // 4. Paste your API key below.
-    const IMGBB_API_KEY = "YOUR_IMGBB_API_KEY"; // <-- PASTE YOUR API KEY HERE
+    const IMGBB_API_KEY = "f4674c56e25d7969059afe104aa60375"; // <-- PASTE YOUR API KEY HERE
     // ===============================================================
 
     // --- Firebase Configuration ---
