--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     import { getFirestore, doc, getDoc, setDoc, onSnapshot, collection, addDoc, serverTimestamp, query, where, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore.js";
 
     // --- ImgBB CONFIGURATION ---
-    const IMGBB_API_KEY = "YOUR_IMGBB_API_KEY"; // <-- PASTE YOUR API KEY HERE
+    const IMGBB_API_KEY = "f4674c56e25d7969059afe104aa60375"; // <-- PASTE YOUR API KEY HERE
 
     // --- Firebase Configuration ---
     const firebaseConfig = {
