--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
     const IMGBB_API_KEY = "f4674c56e25d7969059afe104aa60375";
     const DISCORD_WEBHOOK_URL = "https://discord.com/api/webhooks/1381304917326827580/oFMo8oeVbc_sAx6u5QNaVvlWohGp0iIhn_vDSuT9U8AwMmy3viL3lQY5X4Xbs9Qdhtlt";
-    const firebaseConfig = { apiKey: "AIzaSyDHtwRzPA4EvInGeCDCcRlb4n8I4k2W9Ik", authDomain: "zezo-393a7.firebaseapp.com", projectId: "zezo-393a7", storageBucket: "zezo-393a7.appspot.com", messagingSenderId: "528457075385", appId: "1:528457075385:web:71dfaa69694c090c842968" };
+    const firebaseConfig = { apiKey: "AIzaSyDHtwRzPA4EvInGeCDCcRlb4n8I4k2W9Ik", authDomain: "zezo-393a7.firebaseapp.com", projectId: "zezo-393a7", storageBucket: "zezo-393a7.appspot.com", messagingSenderId: "528457075385", appId: "1:528457075385:web:71dfaa69694c090c842968", measurementId: "G-00RHFXMRMN" };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
