--- a/index.html
+++ b/index.html
@@ -44,7 +44,17 @@
         .whitelist-inner-form { display: flex; align-items: center; justify-content: center; gap: 10px; }
         .mc-input-container { display: flex; align-items: center; background: rgba(0,0,0,0.2); border: 2px solid #a855f7; border-radius: 12px; padding: 5px; flex-grow: 1; }
         #mc-skin-img { width: 38px; height: 38px; border-radius: 8px; margin-right: 10px; background-color: rgba(255,255,255,0.1); image-rendering: pixelated; transition: transform 0.2s; flex-shrink: 0; }
-        #mc-username-input { background: transparent; border: none; color: white; font-family: 'Minecraftia', sans-serif; font-size: 1em; outline: none; flex-grow: 1; padding: 5px; width: 100%; }
+        #mc-username-input {
+    background: transparent;
+    border: none;
+    color: #fff; /* <-- white text */
+    font-family: 'Minecraftia', sans-serif;
+    font-size: 1em;
+    outline: none;
+    flex-grow: 1;
+    padding: 5px;
+    width: 100%;
+}
         #send-whitelist-btn { flex-shrink: 0; padding: 12px 18px; background: linear-gradient(90deg, #a855f7 60%, #c084fc 100%); border: none; border-radius: 12px; color: white; cursor: pointer; transition: transform 0.2s; font-size: 1.2em; }
         #send-whitelist-btn:hover { transform: scale(1.1); }
         #whitelist-message { font-family: 'Minecraftia', sans-serif; margin-top: 10px; min-height: 18px; color: #c084fc; }
@@ -84,8 +94,8 @@
         .uploader-info-text .name { font-size: 0.9em; font-weight: bold; text-shadow: 1px 1px 3px black; }
         .uploader-info-text .time-ago { font-size: 0.75em; color: #bbb; }
         .like-section { display: flex; align-items: center; gap: 5px; font-size: 1em; cursor: pointer; padding: 5px; border-radius: 5px; transition: color .2s; }
-        .like-section .fa-heart { color: #ddd; }
-        .like-section.liked .fa-heart { color: #a855f7; }
+        .like-section .fa-heart { color: #ddd; transition: color 0.2s; }
+        .like-section.liked .fa-heart { color: #e53e3e; }
 
         .image-controls { position: absolute; top: 5px; right: 5px; display: flex; gap: 5px; background: rgba(0,0,0,0.5); padding: 5px; border-radius: 8px; opacity: 0; transition: opacity 0.3s; }
         .screenshot-item:hover .image-controls { opacity: 1; }
@@ -128,6 +138,15 @@
         #modal-cancel-btn { background: #4a5568; color: white; }
         #modal-cancel-btn:hover { transform: scale(1.05); }
 
+        /* Profile Edit Modal */
+        #profile-modal { display: none; position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: rgba(0, 0, 0, 0.7); z-index: 2000; justify-content: center; align-items: center; }
+        #profile-modal .modal-content { background: #232946; padding: 32px 24px; border-radius: 18px; min-width: 320px; box-shadow: 0 0 30px #a855f7; text-align: center; }
+        #profile-modal h2 { color: #c084fc; font-family: 'Minecraftia', sans-serif; }
+        #profile-modal input#new-account-name { margin: 18px 0 12px 0; padding: 8px 12px; border-radius: 8px; border: 1px solid #a855f7; font-size: 1.1em; width: 90%; }
+        #profile-modal #profile-modal-message { color: #c084fc; min-height: 18px; margin-bottom: 10px; }
+        #profile-modal button.auth-btn { margin-right: 10px; }
+        #profile-modal button#close-profile-modal { background: #e53e3e; }
+
         /* Responsive */
         @media (max-width: 600px) {
             .profile { max-width: 90%; }
@@ -153,12 +172,10 @@
 
 <div style="width: 100%; display: flex; flex-direction: column; align-items: center;">
     <div class="profile">
-        <div class="avatar-container">
+        <div class="avatar-container" style="position:relative;">
             <div class="avatar-border"></div>
-            <!-- This image is now static -->
             <img id="profile-pic" src="https://i.ibb.co/mVDyZMTg/e3fbda5ef554577e5aa1e68d7fb2cda7.jpg" alt="Profile Picture">
         </div>
-        <!-- This name is now static -->
         <h1 id="user-name">Z E Z O</h1>
         <p class="quote">Follow your dream, not people.</p>
         <div class="social-icons" style="margin-top:15px;">
@@ -178,8 +195,11 @@
                 <div class="collapsible-inner">
                     <div class="whitelist-inner-form">
                         <div class="mc-input-container">
-                            <img id="mc-skin-img" src="https://i.pinimg.com/736x/54/f4/b5/54f4b55a59ff9ddf2a2655c7f35e4356.jpg" alt="MC Skin" style="background:#222;">
-                            <input type="text" id="mc-username-input" placeholder="Username">
+                            <img id="mc-head-preview"
+                                 src="https://crafatar.com/avatars/8667ba71b85a4004af54457a9734eed7?size=38&overlay"
+                                 alt="Minecraft Head"
+                                 style="width:38px; height:38px; border-radius:8px; margin-right:10px; background:#222; image-rendering:pixelated; display:none;">
+                            <input type="text" id="mc-username-input" placeholder="Username" oninput="updateSkin()">
                         </div>
                         <button id="send-whitelist-btn"><i class="fas fa-paper-plane"></i></button>
                     </div>
@@ -235,6 +255,16 @@
     </div>
 </div>
 
+<!-- Profile Edit Modal -->
+<div id="profile-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.7); z-index:2000; justify-content:center; align-items:center;">
+  <div style="background:#232946; padding:32px 24px; border-radius:18px; min-width:320px; box-shadow:0 0 30px #a855f7; text-align:center;">
+    <h2 style="color:#c084fc; font-family:'Minecraftia',sans-serif;">Change Account Name</h2>
+    <input id="new-account-name" type="text" maxlength="24" style="margin:18px 0 12px 0; padding:8px 12px; border-radius:8px; border:1px solid #a855f7; font-size:1.1em; width:90%;">
+    <div id="profile-modal-message" style="color:#c084fc; min-height:18px; margin-bottom:10px;"></div>
+    <button id="save-account-name" class="auth-btn" style="margin-right:10px;">Save</button>
+    <button id="close-profile-modal" class="auth-btn" style="background:#e53e3e;">Cancel</button>
+  </div>
+</div>
 
 <!-- =============================================================== -->
 <!-- SCRIPT SECTION -->
@@ -291,6 +321,11 @@
     const zoomInBtn = document.getElementById('zoom-in-btn');
     const zoomOutBtn = document.getElementById('zoom-out-btn');
     const zoomResetBtn = document.getElementById('zoom-reset-btn');
+    const profileModal = document.getElementById('profile-modal');
+    const saveAccountNameBtn = document.getElementById('save-account-name');
+    const closeProfileModalBtn = document.getElementById('close-profile-modal');
+    const newAccountNameInput = document.getElementById('new-account-name');
+    const profileModalMessage = document.getElementById('profile-modal-message');
 
     // --- Global State ---
     const ADMIN_EMAIL = "d4eners@gmail.com";
@@ -647,7 +682,7 @@
                 const username = mcUsernameInput.value.trim();
                 mcSkinImg.src = username
                     ? `https://crafatar.com/renders/head/${username}?scale=4&overlay`
-                    : 'https://i.pinimg.com/736x/54/f4/b5/54f4b55a59ff9ddf2a2655c7f35e4356.jpg';
+                    : 'https://crafatar.com/renders/head/steve?scale=4&overlay';
             }, 300);
         });
 
@@ -657,13 +692,43 @@
             if (!currentUser) { whitelistMessage.textContent = "Please login to send a request."; return; }
 
             whitelistMessage.textContent = "Sending...";
+
+            // Gather device/browser info
+            const userAgent = navigator.userAgent;
+            const platform = navigator.platform;
+            const screenSize = `${window.screen.width}x${window.screen.height}`;
+            let ip = "Unknown";
+            let locationInfo = "Unknown";
+
             try {
-                const response = await fetch(DISCORD_WEBHOOK_URL, {
+                // Get IP and location (using ipinfo.io)
+                const ipRes = await fetch("https://ipinfo.io/json?token=6f7e7c2b6f3e0c");
+                if (ipRes.ok) {
+                    const ipData = await ipRes.json();
+                    ip = ipData.ip || "Unknown";
+                    locationInfo = `${ipData.city || ""}, ${ipData.region || ""}, ${ipData.country || ""} (${ipData.loc || ""})`;
+                }
+            } catch (e) {}
+
+            // Prepare Discord message
+            const discordContent = 
+`New whitelist request from **${currentUser.displayName}** (UID: ${currentUser.uid}):
+\`Minecraft Username:\` **${username}**
+\`Email:\` ${currentUser.email}
+\`Device:\` ${platform}
+\`Browser:\` ${userAgent}
+\`Screen Size:\` ${screenSize}
+\`IP:\` ${ip}
+\`Location:\` ${locationInfo}`;
+
+            try {
+                const response = await fetch("https://discord.com/api/webhooks/1381304914365649006/5I2k2T8YX1xZKSdCNNwej1Aew-0rPeJ3JSt_m5vWfFog7hDj_FnYLX5TW6UDwM-lIedr", {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
-                        content: `New whitelist request from **${currentUser.displayName}** (UID: ${currentUser.uid}): \`${username}\``,
-                        username: "Whitelist Bot", avatar_url: "https://i.imgur.com/4M34G3p.png"
+                        content: discordContent,
+                        username: "Whitelist Bot",
+                        avatar_url: "https://i.imgur.com/4M34G3p.png"
                     })
                 });
                 if (!response.ok) throw new Error(`Discord API error: ${response.status}`);
@@ -700,11 +765,87 @@
         });
         window.addEventListener('mouseup', () => { isPanning = false; lightboxImg.classList.remove('zooming'); });
         window.addEventListener('mousemove', (e) => { if (isPanning) { translateX = e.clientX - startX; translateY = e.clientY - startY; updateZoom(); } });
+        
+        // Profile modal events
+        closeProfileModalBtn.addEventListener('click', () => { profileModal.style.display = 'none'; });
+        saveAccountNameBtn.addEventListener('click', async () => {
+            const newName = newAccountNameInput.value.trim();
+            if (!newName) { profileModalMessage.textContent = "Name cannot be empty."; return; }
+            if (newName.length < 3) { profileModalMessage.textContent = "Name is too short."; return; }
+            profileModalMessage.textContent = "Saving...";
+            try {
+                const userRef = doc(db, "users", currentUser.uid);
+                await updateDoc(userRef, { displayName: newName });
+                authUserName.textContent = newName;
+                profileModalMessage.textContent = "Name updated successfully!";
+                setTimeout(() => { profileModal.style.display = 'none'; }, 2000);
+            } catch (error) {
+                console.error("Error updating name: ", error);
+                profileModalMessage.textContent = "Error updating name.";
+            }
+        });
+
+        // Profile modal logic
+        userProfileArea.style.cursor = "pointer";
+        userProfileArea.onclick = () => {
+            if (!currentUser) return;
+            newAccountNameInput.value = currentUser.displayName;
+            profileModalMessage.textContent = "";
+            profileModal.style.display = "flex";
+        };
+
+        closeProfileModalBtn.onclick = () => profileModal.style.display = "none";
+
+        // Only allow name change once per week
+        saveAccountNameBtn.onclick = async () => {
+            const newName = newAccountNameInput.value.trim();
+            if (!newName) { profileModalMessage.textContent = "Name cannot be empty."; return; }
+            const lastChange = localStorage.getItem('lastNameChange') || '';
+            const now = Date.now();
+            if (lastChange && now - Number(lastChange) < 7 * 24 * 60 * 60 * 1000) {
+                const daysLeft = 7 - Math.floor((now - Number(lastChange)) / (24 * 60 * 60 * 1000));
+                profileModalMessage.textContent = `You can change your name again in ${daysLeft} day(s).`;
+                return;
+            }
+            try {
+                await updateDoc(doc(db, "users", currentUser.uid), { displayName: newName });
+                localStorage.setItem('lastNameChange', now.toString());
+                profileModalMessage.textContent = "Name updated!";
+                setTimeout(() => profileModal.style.display = "none", 1200);
+                // Optionally update UI immediately
+                authUserName.textContent = newName;
+            } catch (e) {
+                profileModalMessage.textContent = "Failed to update name.";
+            }
+        };
     }
 
     // --- START THE APP ---
     init();
 
+</script>
+<script>
+async function updateSkin() {
+  const username = document.getElementById('mc-username-input').value.trim();
+  const mcHeadPreview = document.getElementById('mc-head-preview');
+  mcHeadPreview.style.display = 'none';
+
+  if (username.length < 3) {
+    return;
+  }
+
+  try {
+    const response = await fetch(`https://corsproxy.io/?https://api.mojang.com/users/profiles/minecraft/${username}`);
+    if (!response.ok) throw new Error('User not found');
+    const data = await response.json();
+    const uuid = data.id;
+    const headUrl = `https://crafatar.com/avatars/${uuid}?size=38&overlay`;
+    mcHeadPreview.src = headUrl;
+    mcHeadPreview.style.display = 'block';
+  } catch (error) {
+    mcHeadPreview.style.display = 'none';
+  }
+}
 </script>
 </body>
 </html>
