--- a/index.html
+++ b/index.html
@@ -12,8 +12,28 @@
         html { scroll-behavior: smooth; }
         body, html { width: 100%; }
         body { min-height: 100vh; display: flex; flex-direction: column; justify-content: flex-start; align-items: center; color: #fff; text-align: center; position: relative; overflow-x: hidden; background: linear-gradient(180deg, #181b2c 0%, #232946 100%); padding-top: 80px; padding-bottom: 20px; }
-        .star { position: absolute; width: 2px; height: 2px; background: #fff; border-radius: 50%; opacity: .85; pointer-events: none; z-index: 0; animation: starFall linear; }
-        @keyframes starFall { 0% { opacity: .9; transform: translateY(-10vh) scale(1) } 100% { opacity: 0; transform: translateY(110vh) scale(.7) } }
+        #star-sky {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw; height: 100vh;
+    pointer-events: none;
+    z-index: 0;
+    overflow: hidden;
+}
+.star {
+    position: absolute;
+    width: 2px; height: 2px;
+    background: #fff;
+    border-radius: 50%;
+    opacity: .85;
+    pointer-events: none;
+    z-index: 0;
+    animation: starFall linear infinite;
+}
+@keyframes starFall {
+    0% { opacity: .9; transform: translateY(-10vh) scale(1) }
+    100% { opacity: 0; transform: translateY(110vh) scale(.7) }
+}
         
         /* Profile Card Styles */
         .profile { background: linear-gradient(135deg, rgba(168, 85, 247, .18) 0, rgba(147, 51, 234, .18) 100%); padding: 32px 28px; border-radius: 28px; width: 90%; max-width: 370px; box-shadow: 0 0 32px 0 rgba(168, 85, 247, .18), 0 8px 32px 0 rgba(0,0,0,.25); position: relative; border: 2px solid rgba(168, 85, 247, .25); animation: profileFadeIn 1.2s cubic-bezier(.77,0,.18,1) both; transition: box-shadow .5s, border .5s, background .5s; z-index: 1; flex-shrink: 0; }
@@ -501,12 +521,16 @@
         let q = collection(db, "images");
         if (currentUserRole !== 'admin') q = query(q, where("hidden", "==", false));
         
+        let shuffledOnce = false;
         unsubscribeFromImages = onSnapshot(q, (snapshot) => {
             allImages = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-            // Shuffle images for a mixed feed
-            for (let i = allImages.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [allImages[i], allImages[j]] = [allImages[j], allImages[i]];
+            // Shuffle only once per page load
+            if (!shuffledOnce) {
+                for (let i = allImages.length - 1; i > 0; i--) {
+                    const j = Math.floor(Math.random() * (i + 1));
+                    [allImages[i], allImages[j]] = [allImages[j], allImages[i]];
+                }
+                shuffledOnce = true;
             }
             renderPage();
         }, (error) => console.error("Error fetching images: ", error));
@@ -826,6 +850,19 @@
     // --- START THE APP ---
     init();
 
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+    const starSky = document.getElementById('star-sky');
+    for (let i = 0; i < 120; i++) {
+        const star = document.createElement('div');
+        star.className = 'star';
+        star.style.left = `${Math.random() * 100}vw`;
+        star.style.top = `${Math.random() * 100}vh`;
+        star.style.animationDuration = `${2 + Math.random() * 4}s`;
+        starSky.appendChild(star);
+    }
+});
 </script>
 <script>
 async function updateSkin() {
